refactor: remove usage of deprecated URL constructor